# stu_vite_rust

./: Cargo.toml  README.md  add_rs  patch_sea-orm_field.sh
cert/: cert.pem  csr.csr  gen_cert.sh  key.pem
src/: main.rs
src/app/config/: mod.rs  router.rs  start.rs
src/shared/: mod.rs
src/shared/config/: mod.rs  nacos.rs  redis.rs  result.rs  sea_orm.rs
src/shared/salvo/: mod.rs  parse_payload.rs  write_response.rs
