[package]
name = "backend_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
nacos-sdk = "0.4.3"
once_cell = "1.20.2"
redis = "0.27.5"
salvo = { version = "0.78.0", features = ["quinn", "catch-panic", "tower-compat", "logging"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sea-orm = { version = "1.1.2", features = ["sqlx-mysql", "runtime-tokio-rustls", "with-chrono", "debug-print", "macros", "chrono"] }
tower = { version = "0.4.13", features = ["limit"] }
casbin = "2.5.0"
salvo-casbin = "0.73.3"

[profile.dev]
debug = 0
debug-assertions = false
overflow-checks = false

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
panic = "abort"
incremental = false
debug = 0
debug-assertions = false
